--- a/11 Şubat/tabloÖdev/Tablolar.html
+++ b/11 Şubat/tabloÖdev/Tablolar.html
@@ -87,23 +87,26 @@
    
         <tr>
 
-            <td colspan="7">1</td>
+            <td colspan="3">1</td>
 
         </tr>
 
 
         <tr>
 
-            <td colspan="3">2</td>
+            <td>2</td>
 
             <td style="width: 100px;">3</td>
 
-            <td colspan="3">4</td>
+            <td>4</td>
 
         </tr>
 
+    </tbody>
 
-        <tr>
+    <table border="1px" style="border-top-style: hidden;background-color:rgb(140, 192, 140);width: 500px;border-collapse: collapse;border-color: black;">
+
+        <tr align="center" >
 
             <td rowspan="3">5</td>
 
@@ -115,7 +118,7 @@
 
         </tr>
 
-        <tr>
+        <tr align="center">
 
             <td>9</td>
 
@@ -125,7 +128,7 @@
 
         </tr>
 
-        <tr>
+        <tr align="center">
 
             <td>12</td>
 
@@ -134,7 +137,19 @@
         </tr>
 
 
-    </tbody>
+    
+
+    <tr style="background-color: white;border: 0px;visibility: collapse;">
+        <td style="width: 70px;">sütun1</td>
+        <td style="width: 80px;">sütun2</td>
+        <td>sutun3</td>
+        <td style="width: 1px;"></td>
+        <td>sutun5</td>
+        <td style="width: 80px;">sütun6</td>
+        <td style="width: 70px;">sütun7</td>
+    </tr>
+
+</table>
 
 </table>
 
