Form Ödevi yapıldı

--- a/11 Şubat/tabloÖdev/Tablolar.html
+++ b/11 Şubat/tabloÖdev/Tablolar.html
@@ -139,7 +139,7 @@
 
     
 
-    <tr style="background-color: white;border: 0px;visibility: collapse;">
+    <tr style="visibility: collapse;">
         <td style="width: 70px;">sütun1</td>
         <td style="width: 80px;">sütun2</td>
         <td>sutun3</td>
