--- a/14 Subat/DivÖdev.html
+++ b/14 Subat/DivÖdev.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     
-    DİV, "divison" kelimesini kisaltilmisi olarak HTML dunyasina giris yapmistir. Asil anlami tasarimsal alanlar'dır. Birbirinden bagimsiz olarak cok daha gorsel ve kontrol edilmesi kolay tasarim alanlarini olusturma ihtiyacı sonrası hayatimiza girmistir. Ozellikle tablolar ile yapilan tasarimlar uzun zaman ve performans istemi div kullaniminin onemini gun gectikce arttirmaktadir... <br>
-<br>
+    <p> DİV, "divison" kelimesini kisaltilmisi olarak HTML dunyasina giris yapmistir. Asil anlami tasarimsal alanlar'dır. Birbirinden bagimsiz olarak cok daha gorsel ve kontrol edilmesi kolay tasarim alanlarini olusturma ihtiyacı sonrası hayatimiza girmistir. Ozellikle tablolar ile yapilan tasarimlar uzun zaman ve performans istemi div kullaniminin onemini gun gectikce arttirmaktadir...</p> <br>
+    <br>
     Bazı temel kavramlar;
 
     <ul>
@@ -27,10 +27,10 @@
         </div>
         <div id="menu" style="width: 100px; height: 520px; background-color: Orange; float: left;">
         </div>
-        <div id="icerik" style="width: 600px; height: 520px; background-color: Maroon; float: left;">
+        <div id="icerik" style="width: 700px; height: 520px; background-color: Maroon;">
             <img width="450px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Visual_Studio_Icon_2019.svg/1200px-Visual_Studio_Icon_2019.svg.png" alt="Visual Studio">
         </div>
-        <div id="footer" style="width: 700px; height: 30px; background-color: Lime;float: left;">
+        <div id="footer" style="width: 700px; height: 30px; background-color: Lime;">
         </div>
     </div>
     
