--- a/11 Subat/tabloÖdev/Tablolar.html
+++ b/11 Subat/tabloÖdev/Tablolar.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<table border="1px" style="width: 300px; background-color: black;border-color: black;border-collapse: collapse; ">
+<table border="1px" width="300px" style="background-color: black;border-color: black;border-collapse: collapse; ">
 
 
     <thead>
@@ -48,7 +48,7 @@
 </table>
 <br><br>
 
-<table border="1px" style="background-color: dodgerblue; border-color: black; width: 300px;border-color: black;border-collapse: collapse;">
+<table border="1px" width="300px" style="background-color: dodgerblue; border-color: black;border-color: black;border-collapse: collapse;">
     <thead>
         <tr>
             <th colspan="3">Kimlik</th>
@@ -80,7 +80,7 @@
 </table>
 <br><br>
 
-<table border="1px" style="background-color:rgb(140, 192, 140);width: 500px;border-collapse: collapse;border-color: black;">
+<table border="1px" width="500px" style="background-color:rgb(140, 192, 140);border-collapse: collapse;border-color: black;">
 
     <tbody align="center">
 
@@ -96,7 +96,7 @@
 
             <td>2</td>
 
-            <td style="width: 100px;">3</td>
+            <td width="100px">3</td>
 
             <td>4</td>
 
@@ -104,7 +104,7 @@
 
     </tbody>
 
-    <table border="1px" style="border-top-style: hidden;background-color:rgb(140, 192, 140);width: 500px;border-collapse: collapse;border-color: black;">
+    <table border="1px" width="500px" style="border-top-style: hidden;background-color:rgb(140, 192, 140);border-collapse: collapse;border-color: black;">
 
         <tr align="center" >
 
@@ -140,13 +140,13 @@
     
 
     <tr style="visibility: collapse;">
-        <td style="width: 70px;">sütun1</td>
-        <td style="width: 80px;">sütun2</td>
+        <td width="70px">sütun1</td>
+        <td width="80px">sütun2</td>
         <td>sutun3</td>
-        <td style="width: 1px;"></td>
+        <td width="1px"></td>
         <td>sutun5</td>
-        <td style="width: 80px;">sütun6</td>
-        <td style="width: 70px;">sütun7</td>
+        <td width="80px">sütun6</td>
+        <td width="70px">sütun7</td>
     </tr>
 
 </table>
