--- a/11 Subat/FormÖdev/Formlar.html
+++ b/11 Subat/FormÖdev/Formlar.html
@@ -12,7 +12,7 @@
 <form style="font-size: 20px">
 <table border="1px">
     <tr>
-        <td style="width: 130px;"><label for="ad">Ad</label></td>
+        <td width="130px"><label for="ad">Ad</label></td>
         <td><input type="text" id="ad"></td>
     </tr>
 
