--- a/11 Subat/ListeÖdev/listeler.html
+++ b/11 Subat/ListeÖdev/listeler.html
@@ -11,13 +11,13 @@
 
     <ol type="A">
         <li>İç Donanım Birimleri</li>
-        <ul style="list-style-type: circle;">
+        <ul type="circle">
             <li>Anakart</li>
             <li>İşlemci</li>
             <li>Ram</li>
         </ul>
         <li>Dış Donanım Birimleri</li>
-        <ul style="list-style-type: square;">
+        <ul type="square">
             <li>Monitör</li>
             <li>Klavye</li>
         </ul>
@@ -54,7 +54,7 @@
         <li>SOĞUK İÇECEKLER</li>
         <ol>
             <li>MEYVE SULARI</li>
-            <ul style="list-style-type: square;">
+            <ul type="square">
                 <li>Vişne</li>
                 <li>Şeftali</li>
                 <li>Kayısı</li>
@@ -70,22 +70,22 @@
         <li>Elektronik</li>
         <ol type="a">
             <li>Bilgisayar & Tablet</li>
-            <ul style="list-style-type: circle;">
+            <ul type="circle">
                 <li>Dizüstü Bilgisayar</li>
                 <li>Masaüstü Bilgisayar</li> 
                 <li>Table</li>
             </ul>
             <li>Telefon & Telefon Aksesuarları</li>
             <li>Beyaz Eşya</li>
-            <ul style="list-style-type: circle;">
+            <ul type="circle">
                 <li>Çamaşır Makineleri</li>
-                <ul style="list-style-type: square;">
+                <ul type="square">
                     <li>Vestel</li>
                     <li>Samsung</li>
                     <li>Arçelik</li>
                 </ul>
                 <li>Derin Dondurucular</li>
-                <ul style="list-style-type: square;">
+                <ul type="square">
                     <li>Altus</li>
                     <li>Uğur</li>
                 </ul>
@@ -100,12 +100,12 @@
         <li>Süpermarket, Petshop</li>
         <ol type="a">
             <li>Gıda Ürünleri</li>
-            <ul style="list-style-type: circle;">
+            <ul type="circle">
                 <li>Baharatlar</li>
                 <li>Kahvaltılıklar</li>
             </ul>
             <li>Petshop</li>
-            <ul style="list-style-type: circle;">
+            <ul type="circle">
                 <li>Kedi</li>
                 <li>Köpek</li>
                 <li>Balık</li>
@@ -113,7 +113,6 @@
             </ul>
         </ol>
     </ol>
-
 
 </body>
 </html>
