--- a/14 Subat/DivÖdev.html
+++ b/14 Subat/DivÖdev.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     
-    <p> DİV, "divison" kelimesini kisaltilmisi olarak HTML dunyasina giris yapmistir. Asil anlami tasarimsal alanlar'dır. Birbirinden bagimsiz olarak cok daha gorsel ve kontrol edilmesi kolay tasarim alanlarini olusturma ihtiyacı sonrası hayatimiza girmistir. Ozellikle tablolar ile yapilan tasarimlar uzun zaman ve performans istemi div kullaniminin onemini gun gectikce arttirmaktadir...</p> <br>
-    <br>
-    Bazı temel kavramlar;
+    <p> DİV, "divison" kelimesini kisaltilmisi olarak HTML dunyasina giris yapmistir. Asil anlami tasarimsal alanlar'dır. Birbirinden bagimsiz olarak cok daha gorsel ve kontrol edilmesi kolay tasarim alanlarini olusturma ihtiyacı sonrası hayatimiza girmistir. Ozellikle tablolar ile yapilan tasarimlar uzun zaman ve performans istemi div kullaniminin onemini gun gectikce arttirmaktadir...</p>
+    <p> Bazı temel kavramlar;</p>
 
     <ul>
         <li>id => Site uzerinde yer alan ozel bir kontrolu ifade etmek icin kullanilan ozniteliktir. Bir ID benzersizdir ve W3C kurallarina gore kullanilan bir ID baska bir html elementi tarafindan kullanilamaz!</li>
