--- a/14 Subat/ListelemeÖdev.html
+++ b/14 Subat/ListelemeÖdev.html
@@ -9,9 +9,9 @@
 <body>
     
 
-    HTML elementleri icerisinde iki element bize sayfa uzerinde listeleme yapmak icin olanak sunar. Bunlardan bir tanesi <strong> "ul" (unordered list),</strong> bir tanesi ise <strong> "ol" (ordered list)' </strong> dir. <br>
+    <p> HTML elementleri icerisinde iki element bize sayfa uzerinde listeleme yapmak icin olanak sunar. Bunlardan bir tanesi <strong> "ul" (unordered list),</strong> bir tanesi ise <strong> "ol" (ordered list)' </strong> dir.</p>
     <p>Her iki listeleme tipinde de ortak bir element vardır. Bu element de <strong> "li" (list item) </strong> elementidir.</p>
-    Aşağıdaki örnek düzenli bir listeyi göstermektedir:
+    <p> Aşağıdaki örnek düzenli bir listeyi göstermektedir:</p>
 
     <ol type="1">
         <li>Galatasaray</li>
@@ -24,27 +24,27 @@
 
     Aşağıdaki örnek düzensiz bir listeyi göstermektedir:
 
-    <ul style="list-style: disc;">
+    <ul type="disc">
         <li>Introduction</li>
         <li>Object Oriented Programming</li>
         <li>Windows Programlama</li>
         <li>SQL Server</li>
         <li>ADO.NET</li>
-        <ul style="list-style: circle;">
+        <ul type="circle">
             <li>Connected Mimari</li>
             <li>Disconnected Mimari</li>
             <li>XML</li>
         </ul>
         <li>Web Programlama</li>
-        <ul style="list-style: circle;">
+        <ul type="circle">
             <li>Static WEB</li>
-            <ul style="list-style: square;">
+            <ul type="square">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Javascript - JQuery</li>
             </ul>
             <li>Dinamic WEB</li>
-            <ul style="list-style: square;">
+            <ul type="square">
                 <li>ASP.NET</li>
                 <li>PHP</li>
             </ul>
