--- a/28 Subat/Landing Page/index.html
+++ b/28 Subat/Landing Page/index.html
@@ -18,9 +18,10 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <!-- Mobil -->
+    <!-- Tablet,Mobil -->
 
-    <link rel="stylesheet" media="(max-width:600px)" href="css/mobile.css">
+    <link rel="stylesheet" media="(max-width:768px)" href="css/tablet.css">
+    <link rel="stylesheet" media="(max-width:650px)" href="css/mobile.css">
 
     <!-- Font Awesome -->
 
