--- a/4 Mart/odev-3.html
+++ b/4 Mart/odev-3.html
@@ -30,6 +30,7 @@
             list-style-type: none;
             display: flex;
             margin-left: 5%;
+            margin-top: 20px;
         }
 
         nav #list-1 li a {
@@ -37,6 +38,7 @@
         }
 
         nav {
+            
             display: flex;
             width: 100%;
             height: 60px;
