--- a/28 Subat/Englitastic/index.html
+++ b/28 Subat/Englitastic/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Englitastic</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -44,8 +44,17 @@
             </nav>
 
             <nav id="mobile-nav">
-
-                <i id="dropdown" class="fa-solid fa-bars bg-Yellow"></i>
+                
+                <i id="dropdown" class="fa-solid fa-bars bg-Yellow">
+                    <ul class="bg-Yellow">
+                        <li><a href="#Kurslar-Title">Kurslar</a></li>
+                        <li><a href="#Dersler-Title">Özel Eğitimler</a></li>
+                        <li><a href="#sc-3">Blog</a></li>
+                        <li><a href="#sc-4">Etkinlikler</a></li>
+                        <li><a href="#contact">İletişim</a></li>
+                        <li><a href="#Dersler-Title">Mağaza</a></li>
+                    </ul>
+                </i>
 
                 <span id="logo">
                     <i id="icon1" class="fa-solid fa-graduation-cap text-Yellow"></i>
