--- a/21 Mart/Arex Sigorta/index.html
+++ b/21 Mart/Arex Sigorta/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="Css/main.css">
   <link rel="stylesheet" href="Css/tablet.css" media="(max-width:860px)">
 
+  <!-- Js -->
+  <script src="./arex.js"></script>
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -34,7 +37,7 @@
       <div class="container">
 
         <div class="dropdown-1">
-          <button><i class="fa-solid fa-bars"></i></button>
+          <button onclick="dropdownClick()"><i class="fa-solid fa-bars"></i></button>
           <div class="dropdown-item-1">
 
             <ul>
@@ -54,11 +57,11 @@
         <img src="./Css/İmages/Logo.png" alt="" width="140px">
 
         
-        <a href="">Ürünler</a>
-        <a href="">Kurumsal</a>
-        <a href="">Acenta</a>
-        <a href="">Hasar Yardım</a>
-        <a href="">Keşfet</a>
+        <a class="nav-a" href="">Ürünler</a>
+        <a class="nav-a" href="">Kurumsal</a>
+        <a class="nav-a" href="">Acenta</a>
+        <a class="nav-a" href="">Hasar Yardım</a>
+        <a class="nav-a" href="">Keşfet</a>
 
         <button class="btn-1">Online İşlemler</button>
 
@@ -77,7 +80,7 @@
       </div>
 
       <div class="div-2">
-        <img src="./Css/İmages/image1.png" alt="">
+        <img src="./Css/İmages/image1.png">
       </div>
 
     </section>
@@ -298,11 +301,9 @@
 
     </div>
 
-    <button class="btn-1">Ek Teminatlar</button>
+    <button class="btn-1" onclick="EkTeslimatlar()">Ek Teminatlar</button>
 
-    <button class="btn-2">Ek Teminatlar</button>
-
-    <div class="grid" data-aos="fade-right">
+    <div class="grid grid-2" data-aos="fade-right">
 
       <div class="item">
         <img src="./Css/İmages/image3.png">
@@ -715,7 +716,6 @@
   </footer>
 
 
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous">
@@ -731,7 +731,7 @@
   </script>
 
   <script>
-      AOS.init();
+    AOS.init();
   </script>
 
 </body>
