--- a/21 Mart/Arex Sigorta/index.html
+++ b/21 Mart/Arex Sigorta/index.html
@@ -28,7 +28,6 @@
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
-
   <title>Arex Sigorta</title>
 
 </head>
@@ -74,6 +73,8 @@
       </div>
 
       <div class="urunler-box hidden-box">
+
+
         <div class="urunler-grid">
           <ul class="item-1">
             <li><h6>ARAÇ</h6></li>
@@ -115,7 +116,14 @@
             <li><a href="">ZORUNLU DEPREM SİGORTASI</a></li>
           </ul>
 
+          <ul class="item-7">
+            <li><h6>KONUT</h6></li>
+            <li><a href="">KONUT PAKET SİGORTASI</a></li>
+            <li><a href="">ZORUNLU DEPREM SİGORTASI</a></li>
+          </ul>
+
         </div>
+
       </div>
 
     </nav>
