--- a/21 Mart/Arex Sigorta/index.html
+++ b/21 Mart/Arex Sigorta/index.html
@@ -794,8 +794,7 @@
 
   </section>
 
-
-  <footer>
+  <div class="footer">
 
     <div class="bg bg-3">
 
@@ -907,10 +906,10 @@
 
     </div>
 
-  </footer>
+  </div>
 
     <!-- Js -->
-    <script src="./arex.js"></script>
+  <script src="./arex.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -928,30 +927,7 @@
 
 <script type="text/javascript" src="./slick/slick.min.js"></script>
 
-<script>
-    AOS.init();
-
-    $('.slick').slick({
-      dots: true,
-  infinite: true,
-  speed: 700,
-  slidesToShow: 2,
-  slidesToScroll: 2,
-  autoplay: true,
-  autoplaySpeed: 5000,
-  responsive: [
-    {
-      breakpoint: 500,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 1
-      }
-    }
-  ]
-
-});
-
-</script>
+<script src="arexBodyJs.js"></script>
 
 </body>
 
