--- a/Arex Sigorta/index.html
+++ b/Arex Sigorta/index.html
@@ -32,7 +32,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-  <script src="https://unpkg.com/jquery-input-mask-phone-number@1.0.14/dist/jquery-input-mask-phone-number.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.8/jquery.mask.min.js"></script>
+
+  <script src="https://storage.acerapps.io/app-1115/public/20220409/maskjs.js"></script>
 
   <title>Arex Sigorta</title>
 
@@ -341,7 +343,7 @@
 
       <div class="item">
         <label for="tel">Telefon Numarası</label><br>
-        <input type="text" placeholder="(000) 000-0000" oninput="onlyNumberPhone(event)" id="phone">
+        <input type="text" placeholder="(000) 000-0000" id="phone">
       </div>
 
       <button type="submit"><i class="fa-solid fa-arrow-right"></i></button>
@@ -677,49 +679,37 @@
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                  Lorem ipsum dolor sit amet, consectetur?
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Accordion Item #1
                 </button>
               </h2>
-              <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
-                data-bs-parent="#accordionExample">
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fringilla
-                    ligula id dictum consequat. Nunc eget posuere libero. Praesent varius libero
-                    sit amet tincidunt laoreet.</p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, ab.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Lorem ipsum dolor sit amet, consectetur?
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Accordion Item #2
                 </button>
               </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample">
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fringilla
-                    ligula id dictum consequat. Nunc eget posuere libero. Praesent varius libero
-                    sit amet tincidunt laoreet.</p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At, architecto?
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Lorem ipsum dolor sit amet, consectetur?
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Accordion Item #3
                 </button>
               </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                data-bs-parent="#accordionExample">
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fringilla
-                    ligula id dictum consequat. Nunc eget posuere libero. Praesent varius libero
-                    sit amet tincidunt laoreet.</p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, inventore.
                 </div>
               </div>
             </div>
@@ -950,10 +940,6 @@
 
   <!-- Js -->
   <script src="./arex.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
