--- a/Sigorta Şablon R/index.html
+++ b/Sigorta Şablon R/index.html
@@ -13,18 +13,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+
+
     <title>Anasayfa</title>
 </head>
 
 <body>
 
 
-    <img src="./img/MainPage-BackGround.jpg" alt="BackGround" class="backGround">
+    <img src="./img/MainPage-BackGround.png" alt="BackGround" class="backGround-2">
 
 
     <nav>
 
         <div class="container-1">
+            <img src="./img/MainPage-BackGround.png" alt="BackGround" class="backGround">
 
             <h1 class="nav-header">Lorem<span>İP</span></h1>
 
@@ -69,9 +78,39 @@
 
             <div class="offer offer-1">
 
-                <img src="./img/car.png" alt="Car">
+                <img src="./img/carGray.png" alt="Car">
 
                 <h6>Trafik</h6>
+
+                <button>Teklif Al</button>
+
+            </div>
+
+            <div class="offer offer-2">
+
+                <img src="./img/homeGray.png" alt="Home">
+
+                <h6>DASK</h6>
+
+                <button>Teklif Al</button>
+
+            </div>
+
+            <div class="offer offer-3">
+
+                <img src="./img/shieldGray.png" alt="Shield">
+
+                <h6>KASKO</h6>
+
+                <button>Teklif Al</button>
+
+            </div>
+
+            <div class="offer offer-4">
+
+                <img src="./img/healthGray.png" alt="Medical">
+
+                <h6>SAĞLIK</h6>
 
                 <button>Teklif Al</button>
 
