--- a/Sigorta Şablon R/index.html
+++ b/Sigorta Şablon R/index.html
@@ -432,7 +432,7 @@
         <h2 class="header-type-1">Anlaşmalı Sigorta Şirketleri</h2>
 
 
-        <div class="main-container noselect" draggable="false" onmousedown="mouseDown()" onmouseup="mouseUp()" onmousemove="mouseMove(event)" >
+        <div class="main-container noselect" draggable="false" ontouchmove="touchMove(event)" onmousedown="mouseDown()" onmouseup="mouseUp()" onmousemove="mouseMove(event)" >
 
 
             <div class="containers container-1" draggable="false">
