--- a/Sigorta Şablon R/index.html
+++ b/Sigorta Şablon R/index.html
@@ -499,14 +499,48 @@
 
             </div>
 
-            
-
-
         </div>
 
 
     </div>
 
+
+    <div class="footer">
+
+        <div class="E-bülten">
+
+            <div class="container-1 align-center">
+
+                <div class="texts"> 
+
+                    <h5>E-Bülten</h5>
+
+                    <p>Ürünlerimizden ve Kampanyalarımızdan mail üzerinden haberdar olabilirsiniz.</p>
+
+                </div>
+
+                <form autocomplete="off">
+
+                    <input type="email" id="email" placeholder="E-Mail:">
+                    <button type="button">Gönder</button>
+
+                </form>
+
+            </div>
+
+        </div>
+
+        <div class="footer-center">
+
+            <div class="container-1"> 
+
+                
+
+            </div>
+
+        </div>
+
+    </div>
 
 
 
