--- a/Sigorta Şablon R/index.html
+++ b/Sigorta Şablon R/index.html
@@ -522,7 +522,7 @@
                 <form autocomplete="off">
 
                     <input type="email" id="email" placeholder="E-Mail:">
-                    <button type="button">Gönder</button>
+                    <button type="submit">Gönder</button>
 
                 </form>
 
@@ -534,7 +534,15 @@
 
             <div class="container-1"> 
 
-                
+                <ul>
+                    <li><h5>Biz Kimiz?</h5></li>
+
+                    <li><a href="">Hakkımızda</a></li>
+                    <li><a href="">İletişim</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">S.S.S</a></li>
+
+                </ul>
 
             </div>
 
