--- a/Sigorta Şablon R/index.html
+++ b/Sigorta Şablon R/index.html
@@ -532,7 +532,7 @@
 
         <div class="footer-center">
 
-            <div class="container-1"> 
+            <div class="container-1 align-center"> 
 
                 <ul>
                     <li><h5>Biz Kimiz?</h5></li>
@@ -541,10 +541,55 @@
                     <li><a href="">İletişim</a></li>
                     <li><a href="">Blog</a></li>
                     <li><a href="">S.S.S</a></li>
-
                 </ul>
 
+                <ul>
+                    <li><h5>Ürünlerimiz</h5></li>
+
+                    <li><a href="">Trafik Sigortası</a></li>
+                    <li><a href="">Kasko Sigortası</a></li>
+                    <li><a href="">Sağlık Sigortası</a></li>
+                    <li><a href="">Deprem Sigortası</a></li>
+                </ul>
+
+                <ul>
+                    <li><h5>Çerezler</h5></li>
+
+                    <li><a href="">Ürünlerimiz</a></li>
+                    <li><a href="">İletişim</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">S.S.S</a></li>
+                </ul>
+
+                <div class="map-and-icons">
+
+                    <img src="./img/infowindow.png" class="map" alt="map">
+
+                    <div class="icons">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+
+                </div>
+
+                <ul class="iletişim-Bilgileri">
+
+                    <li><h5>İletişim Bilgileri</h5></li>
+
+                    <li><i class="fa-solid fa-envelope"></i> <a href="">acerpro@acerpro.com</a></li>
+                    <li><a href="">+90 553 187 88 55</a></li>
+                    <li><a href="">180 sk. Ayazağa mah. Sarıyer/İstanbul</a></li>
+
+                </ul>
+                
+                
+
+
             </div>
+
+
 
         </div>
 
