--- a/Sigorta Şablon R/index.html
+++ b/Sigorta Şablon R/index.html
@@ -468,7 +468,7 @@
         <h2 class="header-type-1">Anlaşmalı Sigorta Şirketleri</h2>
 
 
-        <div class="main-container noselect" draggable="false" ontouchmove="touchMove(event)" onmousedown="mouseDown(event)" onmouseup="mouseUp()" onmousemove="mouseMove(event)" >
+        <div class="main-container noselect" draggable="false" ontouchmove="touchMove(event)" onmousedown="mouseDown()" onmouseup="mouseUp()" onmousemove="mouseMove(event)" >
 
 
             <div class="containers container-1" draggable="false">
@@ -639,14 +639,14 @@
 
 
 
-    <script src="JS/jquery3.6.0.min.js"></script>
-    <script src="JS/slick1.8.1.min.js"></script>
-    <script src="JS/jquery.validate1.19.3.min.js"></script>
-    <script src="JS/imask6.4.2.min.js"></script>
-    <script src="JS/popper1.16.1.min.js"></script>
-    <script src="JS/bootstrap4.6.1.min.js"></script>
-    <script src="JS/aos2.3.1.js"></script>
-    <script src="JS/app.js"></script>
+    <script src="./JS/jquery3.6.0.min.js"></script>
+    <script src="./JS/slick1.8.1.min.js"></script>
+    <script src="./JS/jquery.validate1.19.3.min.js"></script>
+    <script src="./JS/imask6.4.2.min.js"></script>
+    <script src="./JS/popper1.16.1.min.js"></script>
+    <script src="./JS/bootstrap4.6.1.min.js"></script>
+    <script src="./JS/aos2.3.1.js"></script>
+    <script src="./JS/app.js"></script>
 </body>
 
 </html>
