--- a/Sigorta Şablon R/index.html
+++ b/Sigorta Şablon R/index.html
@@ -35,7 +35,7 @@
     <nav class="align-center">
 
         <div class="container-1">
-            <img src="./img/MainPage-BackGround.png" alt="BackGround" class="backGround">
+            <img src="./img/MainPage-BackGround.png" alt="BackGround" class="backGround align-center">
 
             <h1 class="nav-header">Lorem<span>İP</span></h1>
 
@@ -75,13 +75,14 @@
         <div class="menu-container">
 
             <a href="">Hakkımızda</a>
-            <span class="dropdown-1" onclick="DropdownClick()">Ürünlerimiz<i class="fa-solid fa-angle-down"></i>
+            <span class="dropdown-1" onclick="MenuDropdownClick()">Ürünlerimiz<i class="fa-solid fa-angle-down"></i>
 
                 <div class="dropdown-container">
 
-                    <a href="">Lorem, ipsum.</a>
-                    <a href="">Lorem, ipsum.</a>
-                    <a href="">Lorem, ipsum.</a>
+                    <a href="">Trafik Sigortası</a>
+                    <a href="">Dask Sigortası</a>
+                    <a href="">Kasko Sigortası</a>
+                    <a href="">Sağlık Sigortası</a>
 
                 </div>
 
@@ -479,7 +480,7 @@
         <h2 class="header-type-1">Anlaşmalı Sigorta Şirketleri</h2>
 
 
-        <div class="main-container noselect" draggable="false" ontouchmove="touchMove(event)" onmousedown="mouseDown()" onmouseup="mouseUp()" onmousemove="mouseMove(event)" >
+        <div class="main-container" ontouchmove="touchMove(event)" ontouchstart="touchStart(event)" ontouch onmousedown="mouseDown()" onmouseup="mouseUp()" onmousemove="mouseMove(event)" >
 
 
             <div class="containers container-1" draggable="false">
