--- a/Sigorta Şablon R/Anasayfa.html
+++ b/Sigorta Şablon R/Anasayfa.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/app.css">
+    <link rel="stylesheet" href="style/Anasayfa.css">
     <link rel="stylesheet" href="style/bootstrap4.6.1.min.css">
     <link rel="stylesheet" href="style/slick1.8.1.css">
     <link rel="stylesheet" href="style/slick-theme1.8.1.css">
@@ -480,7 +480,7 @@
         <h2 class="header-type-1">Anlaşmalı Sigorta Şirketleri</h2>
 
 
-        <div class="main-container" ontouchmove="touchMove(event)" ontouchstart="touchStart(event)" ontouch onmousedown="mouseDown()" onmouseup="mouseUp()" onmousemove="mouseMove(event)" >
+        <div class="main-container" ontouchmove="touchMove(event)" ontouchstart="touchStart(event)" onmousedown="mouseDown()" onmouseup="mouseUp()" onmousemove="mouseMove(event)" >
 
 
             <div class="containers container-1" draggable="false">
@@ -658,7 +658,7 @@
     <script src="./JS/popper1.16.1.min.js"></script>
     <script src="./JS/bootstrap4.6.1.min.js"></script>
     <script src="./JS/aos2.3.1.js"></script>
-    <script src="./JS/app.js"></script>
+    <script src="./JS/Anasayfa.js"></script>
 </body>
 
 </html>
