--- a/Sigorta Şablon R/Anasayfa.html
+++ b/Sigorta Şablon R/Anasayfa.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/nav.css">
+    <link rel="stylesheet" href="style/slider.css">
     <link rel="stylesheet" href="style/Anasayfa.css">
     <link rel="stylesheet" href="style/bootstrap4.6.1.min.css">
     <link rel="stylesheet" href="style/slick1.8.1.css">
@@ -18,8 +20,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <title>Anasayfa</title>
 </head>
@@ -41,7 +43,7 @@
 
             <div class="container-2">
 
-                <a href="">Hakkımızda</a>
+                <a href="./Hakkimizda.html">Hakkımızda</a>
                 <span class="dropdown-1">Ürünlerimiz<i class="fa-solid fa-angle-down"></i>
                 
                     <div class="dropdown-container">
@@ -57,7 +59,7 @@
 
                 <a href="">S.S.S</a>
                 <a href="">Blog</a>
-                <a href="">İletişim</a>
+                <a href="./iletisim.html">İletişim</a>
                 <span class="border-box">TR</span>
                 <i class="fa-solid fa-magnifying-glass"></i>
 
@@ -74,7 +76,7 @@
 
         <div class="menu-container">
 
-            <a href="">Hakkımızda</a>
+            <a href="./Hakkimizda.html">Hakkımızda</a>
             <span class="dropdown-1" onclick="MenuDropdownClick()">Ürünlerimiz<i class="fa-solid fa-angle-down"></i>
 
                 <div class="dropdown-container">
@@ -89,7 +91,7 @@
             </span>
             <a href="">S.S.S</a>
             <a href="">Blog</a>
-            <a href="">İletişim</a>
+            <a href="./iletisim.html">İletişim</a>
 
         </div>
 
@@ -658,6 +660,8 @@
     <script src="./JS/popper1.16.1.min.js"></script>
     <script src="./JS/bootstrap4.6.1.min.js"></script>
     <script src="./JS/aos2.3.1.js"></script>
+    <script src="./JS/nav.js"></script>
+    <script src="./JS/slider.js"></script>
     <script src="./JS/Anasayfa.js"></script>
 </body>
 
