--- a/Sigorta Şablon R/Hakkimizda.html
+++ b/Sigorta Şablon R/Hakkimizda.html
@@ -201,7 +201,7 @@
                     
                 </div>
 
-                <h6>İsmail Hamulu</h6>
+                <h6>Berkan Saraç</h6>
 
                 <i class="fa-solid fa-chess-king card-icon"></i>
 
