--- a/XHR Ödev/index.html
+++ b/XHR Ödev/index.html
@@ -14,7 +14,8 @@
         }
 
         h1 {
-            margin-bottom: 100px;
+            margin-bottom: 5vh;
+            font-size: 5vw;
         }
 
     </style>
@@ -62,10 +63,6 @@
         }
 
         xhr.send();
-
-
-
-
 
 
     </script>
