--- a/Kullanıcı Giriş & Kayit Ödev/giris.html
+++ b/Kullanıcı Giriş & Kayit Ödev/giris.html
@@ -18,7 +18,7 @@
 
             <input type="text" placeholder="E-Mail:" id="email">
             <input type="text" placeholder="Şifre:" id="passwd">
-    
+            <p id="hataText"></p>
             <button type="submit">Giriş Yap</button>
             <a href="kayit.html">Kayıt Ol</a>
         </form>
