--- a/Kullanıcı Giriş & Kayit Ödev/kayit.html
+++ b/Kullanıcı Giriş & Kayit Ödev/kayit.html
@@ -19,7 +19,7 @@
             <input type="text" placeholder="E-Mail:" id="email">
             <input type="text" placeholder="Şifre:" id="passwd">
             <input type="text" placeholder="Şifre Tekrar:" id="passwdTekrar">
-    
+            <p id="hataText"></p>
             <button type="submit">Kayıt Ol</button>
             <a href="giris.html">Giriş Yap</a>
         </form>
