--- a/Kullanıcı Giriş & Kayit Ödev/kullanici.html
+++ b/Kullanıcı Giriş & Kayit Ödev/kullanici.html
@@ -16,9 +16,11 @@
 
         <h1 class="title">Merhaba </h1>
         
+        <button id="şifreDeğiş">Şifre Değiştir</button>
         <button id="hesapSil">Hesap Sil</button>
-
         <button id="çıkışYap">Çıkış Yap</button>
+
+        <p id="mesaj"></p>
 
     </div>
 
